--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 <head>
     <title>Palindrome Checker</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="styles.css" rel="stylesheet" />
 </head>
 
